# ru-id

./: .gitignore  README.md  pyproject.toml
src/ru_id/: __init__.py  _utils.py  account.py  bik.py  exceptions.py  inn.py  kpp.py  ogrn.py  snils.py
tests/: test_validators.py
