[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ru-id-validators"
version = "0.1.0"
description = "Валидация российских идентификаторов: ИНН, СНИЛС, ОГРН, КПП, БИК, расчётный счёт"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Matvey" },
]
keywords = ["inn", "snils", "ogrn", "kpp", "bik", "russia", "validation", "идентификаторы"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Natural Language :: Russian",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Mollloko/ru-id"
Repository = "https://github.com/Mollloko/ru-id"
Issues = "https://github.com/Mollloko/ru-id/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "build>=1.0", "twine>=4.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
